<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="30dp"
    android:background="@color/white"
    tools:context=".Activitys.SignUpActivity">


        <ImageView
            android:layout_marginTop="20dp"
            android:layout_width="500dp"
            android:layout_height="200dp"
            android:layout_marginBottom="500dp"
            android:src="@drawable/img" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
    <TextView
        android:id="@+id/SignUpText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ng_k"
        android:layout_marginTop="180dp"
        android:textSize="28sp"
        android:layout_marginStart="20dp"
        />


    <EditText
        android:id="@+id/edtname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nh_p_t_n"
        android:textColorHint="@color/colorPrimary"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/edtemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/nh_p_email"
        android:textColorHint="@color/colorPrimary"
        android:layout_marginTop="20dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/colorAccent1"
        app:startIconTint="@color/colorPrimary"/>

    <EditText
        android:id="@+id/edtpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nh_p_m_t_kh_u"
        android:textColorHint="@color/colorPrimary"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"/>
    <EditText
        android:id="@+id/edtpasswordconfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nh_p_l_i_m_t_kh_u"
        android:textColorHint="@color/colorPrimary"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/btn_SignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/ng_k"
        android:background="@color/colorPrimary"
        />
    <Button
        android:id="@+id/btn_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/ng_nh_p"
        android:background="@color/colorPrimary"/>
    </LinearLayout>
</RelativeLayout>