<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="30dp"
    tools:context=".Activitys.LoginActivity"

    >
    <ImageView
        android:layout_width="500dp"
        android:layout_height="180dp"
        android:layout_marginBottom="500dp"
        android:src="@drawable/img" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:id="@+id/LoginText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ng_nh_p"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="200dp"
        android:textSize="28sp"
        />
        <EditText
            android:id="@+id/edtemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nh_p_email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/colorPrimary"
            android:layout_marginTop="20dp"


            />

        <EditText
            android:id="@+id/edtpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nh_p_m_t_kh_u"
            android:textColorHint="@color/colorPrimary"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"

            />
        <Button
            android:id="@+id/btn_LogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="24sp"
            android:text="@string/ng_nh_p"
            android:background="@color/colorPrimary"
            />
        <Button
            android:id="@+id/btn_SignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="24sp"
            android:text="@string/ng_k"
            android:background="@color/colorPrimary"
            />


    </LinearLayout>






</RelativeLayout>

