<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@color/color2"
        >
    <ImageView
        android:id="@+id/back"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:padding="5dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/ic_back"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:text="@string/trang_c_nh_n"/>
    </LinearLayout>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    app:cardElevation="5dp"
    app:cardCornerRadius="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/profile"
            app:civ_border_width="1dp" />

        <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:maxLines="1"/>


        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/l_u_h_nh_nh"
            android:background="@color/color4"
            android:drawableLeft="@drawable/ic_save"
            android:layout_marginTop="30dp"
            />
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/progressBar"/>

    <Button
        android:id="@+id/Log_out"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color3"
        android:text="@string/ng_xu_t"
        android:drawableLeft="@drawable/ic_back"
        android:layout_marginTop="50dp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>

        </LinearLayout>
